--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "optionSearch": {
-        "nomeParte": "",
+        "nomeParte": "Marciano de Jesus dos Santos",
         "numOrgaoJustica": "0216",
         "Assunto": "",
         "NomeDoRepresentante": "",
