--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "optionSearch": {
-        "nomeParte": "Marciano de Jesus dos Santos",
+        "nomeParte": "BANCO DO BRASIL",
         "numOrgaoJustica": "0216",
-        "Assunto": "",
+        "Assunto": "PASEP",
         "NomeDoRepresentante": "",
         "Alcunha": "",
         "classeJudicial": "",
